# OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_project.sh  compile_commands.json  configure.sh  execute.sh
include/: Camera.h  Mesh.h  Shader.h  callbacks.h  camera.h  key_input.h  shader.h  stb_image.h
shaders/: lightShader.fs  shader.fs  shader.vs
src/: Camera.cpp  Shader.cpp  callbacks.cpp  camera.cpp  key_input.cpp  main.cpp  shader.cpp
